--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <img src="./assets/Porofile-picture.jpeg" alt="Profile Picture" class="profile-pic">
             <div class="contact-details">
                 <h3>CONTACT DETAILS:</h3>
-                <p>Email: <a href="mailto:zijayaseen15@gmail.com">zija.yaseen15@gmail.com</a></p>
+                <p>Email: <a href="mailto:zijayaseen15@gmail.com">zijayaseen15@gmail.com</a></p>
                 <p>Phone: +92 3160426977</p>
             </div>
             <div id="skills-section" class="skills">
